#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
AC_CONFIG_SRCDIR([src/about.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_SUBST([GTK_CFLAGS])
AC_SUBST([GTK_LIBS])
# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile])
dnl Test for pkg-config
PKG_PROG_PKG_CONFIG([0.28])
dnl Test for gtk+
PKG_CHECK_MODULES([GTK], [gtk+-3.0])
AC_OUTPUT
